--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "author": "grandpa-alex",
     "license": "MIT",
     "dependencies": {
+        "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-slider": "^1.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
