--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-slider": "^1.1.2",
+        "@radix-ui/react-switch": "^1.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
