--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-toggle-group": "^1.0.4",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
