--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "license": "MIT",
     "dependencies": {
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
