--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ui-kit-qwep",
     "private": false,
-    "version": "1.0.10",
+    "version": "1.0.16",
     "type": "module",
     "files": [
         "dist/**/*"
@@ -18,6 +18,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "build:types": "tsc",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write .",
         "preview": "vite preview",
@@ -28,7 +29,7 @@
     "description": "Lib",
     "author": "grandpa-alex",
     "license": "MIT",
-    "dependencies": {
+    "peerDependencies": {
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-popover": "^1.0.7",
@@ -36,6 +37,9 @@
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "styled-components": "^6.1.1"
+    },
+    "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
@@ -55,6 +59,8 @@
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
         "classnames": "^2.3.2",
+        "cross-env": "^7.0.3",
+        "dts-bundle-generator": "^9.3.1",
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
@@ -64,7 +70,6 @@
         "prettier": "^3.2.5",
         "rollup-plugin-ignore": "^1.0.10",
         "storybook": "^7.6.16",
-        "styled-components": "^6.1.1",
         "typescript": "^5.2.2",
         "vite": "^5.0.8",
         "vite-plugin-dts": "^3.6.4"
