--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "declaration": true,
         "outDir": "dist/types",
         "paths": {
-            "@src/*": ["src/*"],
+            "@src/*": ["src/*"]
         },
         "target": "ES2020",
         "useDefineForClassFields": true,
