--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ui-kit-qwep",
     "private": false,
-    "version": "1.0.16",
+    "version": "1.0.18",
     "type": "module",
     "files": [
         "dist/**/*"
@@ -30,6 +30,8 @@
     "author": "grandpa-alex",
     "license": "MIT",
     "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-popover": "^1.0.7",
