--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
         "format": "prettier --write .",
         "preview": "vite preview",
         "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\"",
-        "storybook": "storybook dev -p 6666",
+        "storybook": "storybook dev -p 6888",
         "build-storybook": "storybook build"
     },
     "description": "Lib",
     "author": "grandpa-alex",
     "license": "MIT",
     "peerDependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-popover": "^1.0.7",
@@ -39,6 +38,9 @@
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@radix-ui/react-radio-group": "^1.1.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "styled-components": "^6.1.1"
     },
     "dependencies": {
