--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist", "some_other_dir"],
+    "exclude": ["node_modules", "dist", "build", "some_other_dir"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
