--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "ui-kit-qwep",
+    "name": "qwep-ui-kit",
     "private": false,
-    "version": "1.0.21",
+    "version": "1.0.1",
     "type": "module",
     "files": [
         "dist/**/*"
     ],
-    "main": "./dist/ui-kit-qwep.umd.js",
-    "module": "./dist/ui-kit-qwep.es.js",
+    "main": "./dist/qwep-ui-kit.umd.js",
+    "module": "./dist/qwep-ui-kit.es.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/ui-kit-qwep.es.js",
-            "require": "./dist/ui-kit-qwep.umd.js"
+            "import": "./dist/qwep-ui-kit.es.js",
+            "require": "./dist/qwep-ui-kit.umd.js"
         }
     },
     "scripts": {
@@ -34,11 +34,12 @@
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-radio-group": "^1.1.3",
+        "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@radix-ui/react-radio-group": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "styled-components": "^6.1.1"
