--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "qwep-ui-kit",
+    "name": "alex-ui-kit",
     "private": false,
-    "version": "1.0.11",
+    "version": "1.0.0",
     "type": "module",
     "files": [
         "dist/**/*"
     ],
-    "main": "./dist/qwep-ui-kit.umd.js",
-    "module": "./dist/qwep-ui-kit.es.js",
+    "main": "./dist/alex-ui-kit.umd.js",
+    "module": "./dist/alex-ui-kit.es.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/qwep-ui-kit.es.js",
-            "require": "./dist/qwep-ui-kit.umd.js"
+            "import": "./dist/alex-ui-kit.es.js",
+            "require": "./dist/alex-ui-kit.umd.js"
         }
     },
     "scripts": {
