--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "name": "alex-qwep-ui-kit",
     "private": false,
-    "version": "1.0.0",
+    "version": "1.0.1",
     "type": "module",
     "files": [
         "dist/**/*"
     ],
-    "main": "./dist/alex-qwep-ui-kit-ui-kit.umd.js",
-    "module": "./dist/alex-qwep-ui-kit-ui-kit.es.js",
+    "main": "./dist/alex-qwep-ui-kit.umd.js",
+    "module": "./dist/alex-qwep-ui-kit.es.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/alex-qwep-ui-kit-ui-kit.es.js",
-            "require": "./dist/alex-qwep-ui-kit-ui-kit.umd.js"
+            "import": "./dist/alex-qwep-ui-kit.es.js",
+            "require": "./dist/alex-qwep-ui-kit.umd.js"
         }
     },
     "scripts": {
@@ -45,6 +45,7 @@
         "styled-components": "^6.1.1"
     },
     "dependencies": {
+        "@radix-ui/react-scroll-area": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
