--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "build:types": "tsc",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write .",
         "preview": "vite preview",
         "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\"",
-        "storybook": "storybook dev -p 6888",
+        "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build"
     },
     "description": "Lib",
@@ -35,13 +35,13 @@
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-radio-group": "^1.1.3",
+        "@radix-ui/react-scroll-area": "^1.1.0",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-tabs": "^1.1.0",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@radix-ui/react-scroll-area": "^1.1.0",
-        "@radix-ui/react-tabs": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "styled-components": "^6.1.1"
@@ -51,31 +51,36 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@storybook/addon-essentials": "^7.6.16",
-        "@storybook/addon-interactions": "^7.6.16",
-        "@storybook/addon-links": "^7.6.16",
-        "@storybook/addon-onboarding": "^1.0.11",
-        "@storybook/blocks": "^7.6.16",
-        "@storybook/react": "^7.6.16",
-        "@storybook/react-vite": "^7.6.16",
-        "@storybook/test": "^7.6.16",
+        "@chromatic-com/storybook": "^1.6.1",
+        "@storybook/addon-essentials": "^8.2.9",
+        "@storybook/addon-interactions": "^8.2.9",
+        "@storybook/addon-links": "^8.2.9",
+        "@storybook/addon-onboarding": "^8.2.9",
+        "@storybook/blocks": "^8.2.9",
+        "@storybook/builder-vite": "^8.2.9",
+        "@storybook/react": "^8.2.9",
+        "@storybook/react-vite": "^8.2.9",
+        "@storybook/test": "^8.2.9",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@types/styled-components": "^5.1.34",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
+        "@typescript-eslint/eslint-plugin": "^8.1.0",
+        "@typescript-eslint/parser": "^8.1.0",
         "@vitejs/plugin-react": "^4.2.1",
         "classnames": "^2.3.2",
         "cross-env": "^7.0.3",
         "dts-bundle-generator": "^9.3.1",
-        "eslint": "^8.55.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.35.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.9",
         "eslint-plugin-storybook": "^0.8.0",
         "json": "^11.0.0",
         "path": "^0.12.7",
-        "prettier": "^3.2.5",
-        "storybook": "^7.6.16",
+        "prettier": "^3.3.3",
+        "storybook": "^8.2.9",
         "typescript": "^5.3.3",
         "vite": "^5.0.8",
         "vite-plugin-dts": "^3.6.4"
