--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "alex-qwep-ui-kit",
+    "name": "orc-design-ui",
     "private": false,
-    "version": "1.0.10",
+    "version": "1.0.0",
     "type": "module",
     "files": [
         "dist/**/*"
     ],
-    "main": "./dist/alex-qwep-ui-kit.umd.js",
-    "module": "./dist/alex-qwep-ui-kit.es.js",
+    "main": "./dist/orc-design-ui.umd.js",
+    "module": "./dist/orc-design-ui.es.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/alex-qwep-ui-kit.es.js",
-            "require": "./dist/alex-qwep-ui-kit.umd.js"
+            "import": "./dist/orc-design-ui.es.js",
+            "require": "./dist/orc-design-ui.umd.js"
         }
     },
     "scripts": {
@@ -67,8 +67,6 @@
         "@typescript-eslint/eslint-plugin": "^8.1.0",
         "@typescript-eslint/parser": "^8.1.0",
         "@vitejs/plugin-react": "^4.2.1",
-        "classnames": "^2.3.2",
-        "cross-env": "^7.0.3",
         "dts-bundle-generator": "^9.3.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
