--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,13 +23,13 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        // "strict": true,
+        "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
     "include": [
-        "src"
+        "src/lib"
     ],
     "exclude": [
         "node_modules",
