--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "preview": "vite preview",
         "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\"",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "deploy-storybook": "gh-pages -d storybook-static"
     },
     "description": "Lib",
     "author": "grandpa-alex",
@@ -74,6 +75,7 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.9",
         "eslint-plugin-storybook": "^0.8.0",
+        "gh-pages": "^6.2.0",
         "json": "^11.0.0",
         "path": "^0.12.7",
         "prettier": "^3.3.3",
