--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,9 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": [
-        "src/lib"
-    ],
+    // "include": [
+    //     "src/lib"
+    // ],
     "exclude": [
         "node_modules",
         "dist",
